# MCM_YSW

./: .gitignore  results_q2.7z
Q1/: Q1.md  README.md  X_test.npy  X_train.npy  data_preprocessing.py  evaluation_results.txt  feature_columns.txt  main.py  model_building.py  requirements.txt  run_example.py  scaler.pkl  y_chromosome_model.h5  y_test.npy  y_train.npy
Q1_syy/: normalize_and_merge_data.py  test.py  项目结构说明.md
Q1_syy/step1/: README.md  X_features.csv  X_features.npy  data_preprocessing.py  normalization_params.json  processed_data.csv  requirements.txt  run_preprocessing.bat  run_preprocessing.py  step1.md  y_target.csv  y_target.npy  重复数据处理说明.md
Q1_syy/step2_SVR/: README.md  SVR.md  run_svr.bat  run_svr.py  svr_model.py  svr_results.txt
Q1_syy/step2_bmi_grouping/: README.md  bmi_analysis_simple.py  bmi_grouping_analysis.py  run_bmi_analysis.bat
Q1_syy/step2_i/: README.md  feature_engineering_xgboost.py  i.md  requirements.txt  run_feature_engineering.bat  xgboost_results.txt
Q1_syy/step2_lg/: 2.md  README.md  enhanced_analysis_report.md  enhanced_linear_regression.py  enhanced_linear_regression_results.txt  fast_hyperparameter_tuning.py  fast_hyperparameter_tuning_results.txt  feature_selection_analysis.py  feature_selection_results.txt  final_enhanced_analysis_report.md  hyperparameter_tuning.py  hyperparameter_tuning_report.md  linear_regression_analysis.py  linear_regression_model.py  linear_regression_report.md  linear_regression_results.txt  run_linear_regression.bat
Q1_syy/step2_rf/: README.md  requirements.txt  rf.md  rf_model.py  rf_results.txt  run_rf.bat
Q1_syy/step2_xgboost/: README.md  run_xgboost.bat  run_xgboost.py  xgboost.md  xgboost_model.py  xgboost_results.txt
Q2/: README.md  instruction.md  strategy.md
Q2/outputs/: p2_empirical_report.txt  p2_report.txt  step2_config_used.yaml
Q2/step2_1/: 2_1.md  README.md  data_processing.py  step1_config.yaml
Q2/step2_2/: 2_2.md  README.md  p2.py  requirements.txt  run_analysis.bat  数学原理支撑.md  数模论文_问题2.md  经验建模代码原理详解.md
Q2/step2_2/config/: step2_config.yaml
Q2/step2_2/error_analysis/: README.md  run_error_analysis.bat  run_error_analysis.py  检测误差影响分析总结.md
Q2/step3/: IMPLEMENTATION_SUMMARY.md  README.md  p3.py  requirements.txt  run_analysis.py  run_q3.bat
Q3/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  README_problem3.md  analysis.py  config.yaml  pyproject.toml  q3.md  requirements.txt  run_analysis.py
Q3/.github/workflows/: ci.yml
Q3/configs/: logging.yaml  mi_sigma_sweep.yaml  q3_default.yaml
Q3/data/schemas/: long_records_schema.yaml  surv_dat_schema.yaml
Q3/scripts/: run_grouping_dp.py  run_pipeline.py  run_sigma_sweep.py
Q3/src/: __init__.py  aft_models.py  cli.py  config.py  dataio.py  exceptions.py  grouping.py  io_utils.py  mi_interval_imputer.py  mu_sigma_models.py  optimize.py  plots.py  redraw.py  risk_objective.py  sensitivity.py  surv_predict.py  utils.py
Q3/src/models/: attain_model.py  success_model.py
Q3/tests/: __init__.py
Q3/tests/integration/: test_pipeline.py
Q3/tests/unit/: test_config.py  test_utils.py
(+20 files in other folders)
